working fine with static url

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-    "cSpell.words": ["monitorbot"]
+    "cSpell.words": [
+        "Amul",
+        "domcontentloaded",
+        "itemprop",
+        "monitorbot",
+        "networkidle",
+        "pincode",
+        "Pincode",
+        "searchitem"
+    ]
 }
