--- a/package.json
+++ b/package.json
@@ -13,11 +13,10 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "axios": "^1.9.0",
-    "cheerio": "^1.1.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "node-telegram-bot-api": "^0.66.0",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "puppeteer": "^24.10.0"
   }
 }
