--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "build": "",
-    "postinstall": "npx puppeteer browsers install chrome",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,10 +12,10 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
+    "dotenv": "16.5.0",
+    "express": "5.1.0",
     "node-telegram-bot-api": "^0.66.0",
-    "nodemon": "^3.1.10",
-    "puppeteer": "^24.10.0"
+    "nodemon": "3.1.10",
+    "puppeteer": "19.11.1"
   }
 }
