--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "chromium": "^3.0.3",
     "dotenv": "16.5.0",
     "express": "5.1.0",
     "node-telegram-bot-api": "^0.66.0",
     "nodemon": "3.1.10",
-    "puppeteer": "19.11.1"
+    "puppeteer-core": "19.11.1"
   }
 }
